Made server actually check that you have the right password :^)
